<resources>
    <string name="app_name">Convertisseur</string>
    <string name="Convertir">"Convertir"</string>
    <string name="Quitter">"Quitter"</string>
    <string name="devisedep">"Devise de départ"</string>
    <string name="devisear">"Devise d'arrivee"</string>
    <string name="montant">"Montant à convertir"</string>
    <string name="parametre">Paramètres</string>
    <string name="date">Changer la date</string>
    <string name="langue">Changer la langue</string>
    <string name="affichage">Changer l\'affichage</string>
    <style name="afpa">
        <item name="android:background">@drawable/fond_afpa</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:orientation">vertical</item>
        <item name="android:textColor">#0023A0</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">match_parent</item>
    </style>
    <style name="afpa_land">
        <item name="android:background">@drawable/fond_afpa_land</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:orientation">vertical</item>
        <item name="android:textColor">#0023A0</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">match_parent</item>
    </style>
</resources>